
* Added source field for birth, baptism, death, burial, marriage.

* gwd:
  - fixed bug, missing ancestors were printed in reverse order
  - fixed bug, could not find file "start.txt" in -hd directory.
  - fixed bug, missing persons when displaying close names
  - used flags for languages selection instead of tables
  - better displaying of dates for the miscellaneous languages

* ged2gwb:
  - does not stop any more when bad GEDCOM line found => warning and goes on.
  - added option -nd setting flag "not dead" instead of "don't know if dead"
    for personal records where "DEAT" exists but is empty.

* gwb2ged:
  - start now pointers with 1 instead of 0 because some softwares seem not
    to accept @I0@ and @F0@.
  - generate always ANSEL encoding

* gwu:
  - added option -d to select descendants like in gwb2ged

GeneWeb Version 1.06
--------------------

* ged2gwb:
  - warning, not error now, when a person is undefined
* a.cnf:
  - added example of setting background image

GeneWeb Version 1.05
--------------------

* gwd:
  - added ability to merge persons and families.
  - added advanced requests
  - added year interval when displaying missing ancestors
  - (detail) added dates when displaying descendants indexes.
  - (detail) misc terms changing ("add"->"insert"; "nickname"->"qualifier"...)

* gwu:
  - added option "-a" to select ancestors like in command "gwb2ged".

* bug fixes:
  - Fixed a problem of blocking: the symptom was that, in some
    versions of Windows 95, "gwd" started normally, but when opening
    the site in the navigator, the site was found but the navigator was
    waiting and waiting forever.
  - When updating a person, if the "notes" field holds only a newline,
    the request is rejected => fixed. Moreover some browsers add this "bad"
    newline if the notes fields is empty => fixed.

GeneWeb Version 1.04
--------------------

* gwd, ged2gwb, gwb2ged:
  - added baptism (separated from birth) and burial/cremation.